--- a/index.html
+++ b/index.html
@@ -7,22 +7,63 @@
     <title>Hack-Odisha</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style1.css">
-    
+    <script type="text/javascript" src="message.js"></script>    
 </head>
 <body>
-    <section class="sec">
-        <div class="homebg">
-            <div class="heading">
-                <h1 style="margin: 0;">Odisha</h1>
+    <a name="home"></a>
+    <nav>
+        <div id="mySidepanel" class="sidepanel">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <hr>
+            <a href="#home">HOME</a>
+            <hr>
+            <a href="#internal_food">Food</a>
+            <hr>
+            <a href="#">Temples</a>
+            <hr>
+            <a href="#">Dance</a>
+            <hr>
+        </div>
+        
+        <button class="openbtn" onclick="openNav()">&#9776; Menu</button>
+        <div class="bttn">
+            <div class="dropdown">
+                <button class="dropbtn">LOGIN</button>
+                <div class="dropdown-content">
+                    <a href="#">LOGIN</a>
+                    <a href="#">SIGN UP</a>
+                </div>
             </div>
-            <div class="para">
-                <p> <span>Be the</span><span> bird with </span> <span>wings who </span>  <span> knows how </span> <span>to fly .</span><br>
-                    <span>Explore the </span> <span>beauty of </span> <span>Odisha nestled</span> <span>in the </span> <span>lap of </span>  <span>Eastern Ghats </span> <span>and fed by</span>  <span> the tides </span> <span>of the Bay </span> <span> of Bengal</span><br>
-                    <span> Visit the </span> <span>prestine beaches </span> <span>,majestic mountains</span> <span> dazzling rivers,</span>  <span>enchanting waterfalls</span><br>
-                    <span>and a vivid </span> <span>flora & </span> <span>fauna of the</span> <span>soul of India.</span>
-                </p>
+            <div class="dropdown">
+                <button class="dropbtn">WISH-LIST</button>
+                <div class="dropdown-content">
+                    <a href="#">LOGIN</a>
+                    <a href="#">SIGN UP</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">SHARE</button>
+                <div class="dropdown-content">
+                    <a href="#">LOGIN</a>
+                    <a href="#">SIGN UP</a>
+                </div>
             </div>
         </div>
-</section>
+    </nav>
+    <div class="homebg">
+        <div class="heading">
+            <h1 style="margin: 0;">Odisha</h1>
+        </div>
+        <div class="para">
+            <p> <span>Be the </span><span> bird with </span> <span>wings who </span>  <span> knows how </span> <span>to fly .</span><br>
+                <span>Explore the </span> <span>beauty of </span> <span>Odisha nestled</span> <span>in the </span> <span>lap of </span>  <span>Eastern Ghats </span> <span>and fed by</span>  <span> the tides </span> <span>of the Bay </span> <span> of Bengal</span><br>
+                <span> Visit the </span> <span>prestine beaches </span> <span>,majestic mountains</span> <span> dazzling rivers,</span>  <span>enchanting waterfalls</span><br>
+                <span>and a vivid </span> <span>flora & </span> <span>fauna of the</span> <span>soul of India.</span>
+            </p>
+        </div>
+    </div>
+    <div class="fobg">
+        <a name="internal_food"></a>
+    </div>
 </body>
 </html>
