--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hack-Odisha</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style2.css">
     <script type="text/javascript" src="message.js"></script>    
 </head>
 <body>
@@ -19,16 +20,16 @@
             <hr>
             <a href="#internal_food">Food</a>
             <hr>
-            <a href="#">Temples</a>
+            <a href="#internal_temple">Temples</a>
             <hr>
-            <a href="#">Dance</a>
+            <a href="#internal_dance">Dance</a>
             <hr>
         </div>
         
         <button class="openbtn" onclick="openNav()">&#9776; Menu</button>
         <div class="bttn">
             <div class="dropdown">
-                <button class="dropbtn">LOGIN</button>
+                <button class="dropbtn">SHARE</button>
                 <div class="dropdown-content">
                     <a href="#">LOGIN</a>
                     <a href="#">SIGN UP</a>
@@ -36,13 +37,9 @@
             </div>
             <div class="dropdown">
                 <button class="dropbtn">WISH-LIST</button>
-                <div class="dropdown-content">
-                    <a href="#">LOGIN</a>
-                    <a href="#">SIGN UP</a>
-                </div>
             </div>
             <div class="dropdown">
-                <button class="dropbtn">SHARE</button>
+                <button class="dropbtn">LOGIN</button>
                 <div class="dropdown-content">
                     <a href="#">LOGIN</a>
                     <a href="#">SIGN UP</a>
@@ -64,6 +61,106 @@
     </div>
     <div class="fobg">
         <a name="internal_food"></a>
+        <section class="services1" id="services1">
+            <div class="max-width">
+            <h2 class="title">FOODS</h2>
+            <div class="serve-content">
+                <div class="card">
+                <div class="box">
+                <i class="fa fa-bar-chart"></i>
+                <div class="text"><img class="card1" src="food1.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">Pakhala Bhata</h1></u></div>
+                <p>A lunch staple for almost every household in the state of Odisha, Pakhala Bhata offers a delectable respite from the summer heat. Made from soaking cooked rice in sour curd and water, this dish from Odisha is served with fried fish, potatoes, Badi choora, and papad on the side. Being a popular food and main food of Odisha, this delicacy should be one of your first dishes to try on your trip to Odisha.</p>
+                </div>
+                </div>
+                <div class="card">
+                <div class="box">
+                <i class="fa fa-edit"></i>
+                <div class="text"> <img class="card1" src="food2.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">Chhena Poda</h1></u></div>
+                <p>Say hello to the cheesecake of Odisha – Chhena Poda. You will be left obsessing over this delicacy long after eating it. Baked for hours at a stretch, this dish is made from burnt home-made cottage cheese, sugar syrup, and semolina. The caramelized sugar of Chhena Poda imparts a distinctive taste to it and is one of those dishes of Odisha which you can find in every lane and by-lane of the state.</p>
+            </div>
+            </div>
+            <div class="card">
+            <div class="box">
+                <i class="fa fa-check-square-o"></i>
+                <div class="text"><img class="card1" src="food3.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">Pilaf</h1></u></div>
+                <p>Pilaf or pulao is one of the most famous dishes of Odisha. It is a scrumptious rice dish that is sautéed with oil until it turns golden brown in colour. The refreshing aroma of spices seems to draw you toward this delicacy and makes for a great self-indulgent supper when you tour Odisha. It is also prepared in different varieties in various cultures wherein vegetables, dry fruits are added into it to give the dish a one-of-its-kind twist.</p>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </section>
     </div>
+    <!-- <div class="tebg"> -->
+        <a name="internal_temple"></a>
+        <section class="services" id="services">
+            <div class="max-width">
+            <h2 class="title">TEMPLES</h2>
+            <div class="serve-content">
+                <div class="card">
+                <div class="box">
+                <i class="fa fa-bar-chart"></i>
+                <div class="text"><img class="card1" src="card1.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">Sun Temple</h1></u></div>
+                <p>Arguably the best known of the many hundreds of Orissa temples is the so-called Sun Temple at Konark, a UNESCO World Heritage site that dates to the 13th century. Located just off the Bay of Bengal coast, the structure is unique for its construction: the sweeping complex is modeled on a chariot. Although much of the temple now lies in ruins, what exists is captivating to behold: built from red-hued rocks, the structure is covered in ornate carvings, and is dedicated to Surya, the Sun God.</p>
+                </div>
+                </div>
+                <div class="card">
+                <div class="box">
+                <i class="fa fa-edit"></i>
+                <div class="text"> <img class="card1" src="card2.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">Jaggannath Temple</h1></u></div>
+                <p>Visitors tend to make the journey to Puri for two reasons: one being the coastal city’s beaches and resorts, and the other the Jagannath Temple. Constructed in the 12th century and devoted to Lord Jagannath, the site attracts huge numbers of Hindu pilgrims every year. It’s also a wonderful site for the colorful and unique Ratha-Yatra, or chariot festival. Held during the summer, the festival dates back over 2,000 years and features massive, colorful chariots that are paraded through the streets.</p>
+            </div>
+            </div>
+            <div class="card">
+            <div class="box">
+                <i class="fa fa-check-square-o"></i>
+                <div class="text"><img class="card1" src="card3.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">Rajarani Temple</h1></u></div>
+                <p>Within a tranquil garden setting, Bhubaneshwar’s Rajarani Temple is another must-see among the Orissa temples. The 11th-century landmark is widely known for its many erotic carvings, which have led to rumours that it was constructed as a pleasure retreat for ancient Oriya rulers. The detailed level of carving also extends to other narrative sculptures as well as numerous spires, which make the structure a certified architectural marvel.</p>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </section>
+    <!-- </div> -->
+    <a name="internal_dance"></a>
+        <section class="services2" id="services2">
+            <div class="max-width">
+            <h2 class="title">DANCE</h2>
+            <div class="serve-content">
+                <div class="card">
+                <div class="box">
+                <i class="fa fa-bar-chart"></i>
+                <div class="text"><img class="card1" src="dance1.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">CHHAU DANCE</h1></u></div>
+                <p>A traditional dance form in Odisha, which is used to enacts the episodes from the Hindu epics of Ramayana and Mahabharata, is Chhau Dance. The indigenous dance forms are integrated with martial arts to form this dance form.</p>
+                </div>
+                </div>
+                <div class="card">
+                <div class="box">
+                <i class="fa fa-edit"></i>
+                <div class="text"> <img class="card1" src="dance2.jpg"></div>
+                <div><u><h1 style="color: goldenrod;">CHAITI GHODA</h1></u></div>
+                <p>Chaiti Ghoda dance, also known as the Horse Dance is mainly performed during the festivities related to the fishing communities of Odisha. This interesting-to-watch dance form is only performed by Kaibarta Caste.</p>
+            </div>
+            </div>
+            <div class="card">
+            <div class="box">
+                <i class="fa fa-check-square-o"></i>
+                <div class="text"><img class="card1" src="dance3.jfif"></div>
+                <div><u><h1 style="color: goldenrod;">CHANGU DANCE</h1></u></div>
+                <p>Performed by almost all the regional tribes of Odisha, Changu Dance is a rural variety of the tambourine. This dance is mainly performed by women however men only sing songs and groove with female dancers with simple steps.</p>
+            </div>
+        </div>
+        </div>
+        </div>
+        </div>
+        </section>
 </body>
 </html>
