--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
             <div class="dropdown">
                 <button class="dropbtn">SHARE</button>
                 <div class="dropdown-content">
-                    <a href="#">LOGIN</a>
-                    <a href="#">SIGN UP</a>
+                    <a href="#">WhatsApp</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">G Mail</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">LinkedIn</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -162,5 +166,34 @@
         </div>
         </div>
         </section>
+        <footer class="footer-distributed">
+
+			<div class="footer-right">
+
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<a href="#"><i class="fa fa-github"></i></a>
+
+			</div>
+
+			<div class="footer-left">
+
+				<p class="footer-links">
+					<a class="link-1" href="#">Home</a>
+
+					<a href="#">Blog</a>
+
+					<a href="#">About</a>
+
+					<a href="#">FAQ(s)</a>
+
+					<a href="#">Contact</a>
+				</p>
+
+				<p>Mystics &copy; 2022</p>
+			</div>
+
+		</footer>
 </body>
 </html>
